EXTRA_DIST = examplerules.py BMP2PNG.py disclaimer.py movetopublic.py movetopublic.cfg uudecode.py

zarafa_dagentdir = ${datadir}/zarafa-dagent/python/plugins
zarafa_dagent_DATA=examplerules.py BMP2PNG.py movetopublic.py

zarafa_dagent_configdir = ${zarafa_dagentdir}
zarafa_dagent_config_DATA=movetopublic.cfg

zarafa_spoolerdir = ${datadir}/zarafa-spooler/python/plugins
zarafa_spooler_DATA=disclaimer.py

